[package]
name = "rnbd"
version = "0.1.0"
authors = ["LeeSmet <lee.smet@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
[dependencies]
tokio = { version = "0.2", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
sled = { version = "0.31", features = ["io_uring"] }
async-trait = "0.1"

[[bin]]
name = "rnbd-server"
path = "src/main.rs"

[profile.release]
debug = true
