[package]
name = "rnbd"
version = "0.1.0"
authors = ["LeeSmet <lee.smet@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
# sled = { version = "0.34", features = ["io_uring"] }
sled = { version = "0.34" }
async-trait = "0.1"
redis = { version = "0.21", features = ["connection-manager", "tokio-comp"] }
futures = "0.3"

[[bin]]
name = "rnbd-server"
path = "src/main.rs"

[profile.release]
debug = true
